Removed CP based cache
SVN-Revision: 22007